# proiect-aai-popszarkatatar

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  ragas_report.txt  requirements.txt  surse.txt
notebooks/: demo_pipeline.ipynb
scripts/: build_index.py  evaluate_rag.py  run_demo.py  test_parser.py  test_recommendation.py  test_retrieval.py  test_risk.py
src/: app.py  dtos.py
src/agents/: parser_agent.py  recommendation_agent.py  retrieval_agent.py  risk_agent.py
src/graph/: __init__.py  workflow.py
src/tools/: pdf_tools.py  vector_tools.py
