[project]
name = "legal-contract-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "streamlit>=1.58.0",
]
